
525) Added the --with-pc-insults configure to replace politically
     incorrect insults with ones from Alek O. Komarnitsky.

526) Added start_tls support from Gudleik Rasch <gudleik@rastamatra.org>.

527) A uid specified in sudoers now matches the user specified by the
     -u flag even if the -u flag specified a name, not a uid.

528) /tmp/.odus is no longer used for timestamps by default.  One of
     /var/run/sudo, /var/adm/sudo or /usr/adm/sudo is used depending
     on what directories exist.

529) Quoting globbing characters with a backslash now works as documented.

530) A negated user/uid in a runas list was not treated the same as a
     negated command (it did not override a previously allowed entry).
     Now it does.

531) Added support for Tandem NSK and other systems w/o seteuid().

532) The timeout on password reading is now done via alarm(), not select().

533) Fixed several issues when closing all open descriptors.  Sudo now uses
     closefrom() if it exists, using /proc/$$/fd if possible.

534) Use PATH_MAX, not MAXPATHLEN since the former is standardized.

535) Added a check in visudo for runas_default being used before it
     was set.

536) If the target user == invoking user a password is no longer required.

537) PAM support now uses Use pam_acct_mgmt() to check for disabled accounts
    (from Brian Farrell).

538) The sudoers file is now parsed as the runas user in all cases instead
     of root.  This fixes some issues with running NFS-mounted commands.

539) Sudo now produces a sensible error message when the targetpw
     Defaults option is set and a non-existent uid is specified via -u.

Sudo 1.6.8 released.

540) Now find the command base and fill in struct stat earlier.

541) sudoedit now re-opens the temp file as the invoking user.

542) struct timespec is used throughout the code base.

543) Added --with-ldap-conf-file option to override /etc/ldap.conf

544) Added SSL tls_* certificate checking options when using LDAP.